Bug 208506 - REGRESSION(r257726): [GTK] LayoutTests crashing after r257726
Summary: REGRESSION(r257726): [GTK] LayoutTests crashing after r257726
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Diego Pino
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-03-03 02:08 PST by Diego Pino
Modified: 2020-03-24 13:34 PDT (History)
6 users (show)

See Also:


Attachments
Patch (1.26 KB, patch)
2020-03-03 02:28 PST, Diego Pino
no flags Details | Formatted Diff | Diff
Patch (1.28 KB, patch)
2020-03-03 04:15 PST, Diego Pino
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Diego Pino 2020-03-03 02:08:54 PST
[GTK] Unreviewed, remove unnecessary code which made LayoutTests crash
Comment 1 Diego Pino 2020-03-03 02:28:39 PST
Created attachment 392256 [details]
Patch
Comment 2 Diego Pino 2020-03-03 04:15:13 PST
Created attachment 392260 [details]
Patch
Comment 3 WebKit Commit Bot 2020-03-03 05:16:41 PST
Comment on attachment 392260 [details]
Patch

Clearing flags on attachment: 392260

Committed r257772: <https://trac.webkit.org/changeset/257772>
Comment 4 WebKit Commit Bot 2020-03-03 05:16:43 PST
All reviewed patches have been landed.  Closing bug.
Comment 5 Radar WebKit Bug Importer 2020-03-03 05:17:19 PST
<rdar://problem/59992464>
Comment 6 Fujii Hironori 2020-03-24 13:34:51 PDT
Comment on attachment 392260 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=392260&action=review

> Tools/WebKitTestRunner/TestController.cpp:-3102
> -    WKWebsiteDataStoreSetResourceLoadStatisticsEnabled(websiteDataStore(), true);

WKWebsiteDataStoreSetResourceLoadStatisticsEnabled seems needed for WinCairo port because it enables RESOURCE_LOAD_STATISTICS. I'm going to fix it in Bug 209410.