REGRESSION(r257726): [GTK] LayoutTests crashing after r257726 https://bugs.webkit.org/show_bug.cgi?id=208506

Reviewed by Carlos Garcia Campos.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::platformAdjustContext): Remove unnecessary code.


Canonical link: https://commits.webkit.org/221424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257772 268f45cc-cd09-0410-ab3c-d52691b4dbfc